--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,12 @@ services:
     environment:
       - DATABASE_URL=postgresql://gryag:gryag@172.20.0.11:5432/gryag
       - REDIS_URL=redis://172.20.0.10:6379/0
+      - METRICS_PORT=9100
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS http://127.0.0.1:${METRICS_PORT:-9100}/metrics >/dev/null"]
+      interval: 20s
+      timeout: 5s
+      retries: 6
 # Note: Models are stored in local folder (./models)
 # Redis data folder (./redis-data) preserved for future use
 
