Update Docker configuration, enhance donation command, and improve metrics handling
- Updated `.dockerignore` to include the Docker entrypoint script.
- Modified `Dockerfile` to execute the entrypoint script using `sh`, removing the need for executable permissions.
- Changed the default value of `enable_health_metrics` in `config.py` to `False`.
- Enhanced the `broadcast_donate_command` in `admin.py` to improve confirmation handling and added rate limiting for message broadcasting.
- Updated `command_throttle.py` to include the `broadcastdonate` command in the middleware.
- Made Prometheus metrics optional in `metrics.py`, providing no-op implementations if the library is not available.
- Adjusted SQL migration scripts to change user ID fields from `INTEGER` to `BIGINT` for better compatibility with larger user IDs.

This update aims to streamline Docker setup, enhance command handling, and improve observability through optional metrics.

--- a/.dockerignore
+++ b/.dockerignore
@@ -53,6 +53,7 @@ htmlcov/
 logs/
 coverage.xml
 
-# Scripts directory (except warp setup needed for Docker)
+# Scripts directory (except warp setup and docker entrypoint needed for Docker)
 scripts/
 !scripts/warp/
+!scripts/docker/
