--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ psutil>=5.9
 tzdata>=2024.1
 PyYAML>=6.0
 Pillow>=10.0
+edge-tts>=6.1.0  # Free TTS provider with Ukrainian support
+pydub>=0.25.1  # Audio conversion (requires ffmpeg system package)
 
 # Testing dependencies
 pytest>=8.0
