feat: phase 4 — tool implementations + i18n translation system
- backend/internal/tools/memory.go (recall, remember, forget via PostgreSQL)
- backend/internal/tools/imagegen.go (Nano Banana Pro HTTP API — no TODOs)
- backend/internal/tools/sandbox.go (docker run, zero-network, resource limits)
- backend/internal/tools/executor.go (dispatch, panic recovery, i18n-translated responses)
- backend/internal/i18n/i18n.go (JSON locale loader, fallback, placeholder substitution)
- config/locales/uk.json + en.json (Ukrainian-first, English fallback)
- No moderation tools (removed from plan)
- 24 total tests PASS (7 new i18n + 4 executor)

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,9 @@ PERSONA_FILE=config/persona.txt
 TELEGRAM_MODE=polling
 WEBHOOK_URL=
 WEBHOOK_SECRET=
+
+# ---- Localization ----
+# Directory containing JSON locale files (uk.json, en.json, etc.)
+LOCALE_DIR=config/locales
+# Default language code (must match a filename in LOCALE_DIR)
+DEFAULT_LANG=uk
