feat: phase 6 — production hardening, message search, docs

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,10 @@ PROACTIVE_CRON_SCHEDULE=0 */4 * * *
 IMMEDIATE_CONTEXT_SIZE=50
 MEDIA_BUFFER_MAX=10
 
+# ---- Data Retention ----
+# Messages older than this are deleted on startup (0 = keep forever)
+MESSAGE_RETENTION_DAYS=90
+
 # ---- Persona ----
 PERSONA_FILE=config/persona.txt
 
