--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_TEMPERATURE=0.9
 GEMINI_ROUTING_TEMPERATURE=0.0
+# Define budget for Gemini Thinking features (0 = disabled, try 1024 or higher for deep thinking)
+GEMINI_THINKING_BUDGET=0
 
 # ---- OpenAI API (Optional) ----
 OPENAI_API_KEY=
