feat: enhance proactive messaging and media handling
- Updated .env.example to include new configuration options for allowed chat IDs, media cache settings, and proactive messaging hours.
- Modified AGENTS.md to reflect the updated Go version and enhancements in proactive messaging.
- Refactored bot architecture documentation to replace references to Nano Banana Pro with Gemini 3 Pro Image Preview.
- Implemented proactive messaging functionality in the backend, allowing the bot to send messages based on a scheduled queue.
- Added media caching capabilities to store generated images for future edits, improving performance and user experience.
- Updated Dockerfile and docker-compose.yml to expose necessary ports for backend and frontend services.
- Enhanced tests to cover new proactive messaging and media handling features.

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,14 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 # ---- Admin IDs (comma-separated Telegram user_id values) ----
 ADMIN_IDS=392817811
 
+# Optional: comma-separated chat_id list; empty = allow all chats (DMs and groups)
+# ALLOWED_CHAT_IDS=123456789,-1001234567890
+# Max attachment size (bytes) to send to backend as base64; larger files are skipped (default 10MB)
+# MEDIA_MAX_BYTES=10485760
+
 # ---- Gemini API ----
 GEMINI_API_KEY=your_gemini_api_key_here
+# See https://ai.google.dev/gemini-api/docs/models and each model's capability table.
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_TEMPERATURE=0.9
 GEMINI_ROUTING_TEMPERATURE=0.0
@@ -54,12 +60,13 @@ RATE_LIMIT_SANDBOX_PER_DAY=20
 SANDBOX_TIMEOUT_SECONDS=5
 SANDBOX_MAX_MEMORY_MB=128
 
-# ---- Image Generation (Nano Banana Pro) ----
-NANO_BANANA_API_KEY=
-NANO_BANANA_API_URL=
+# Image generation uses GEMINI_API_KEY and model gemini-3-pro-image-preview (no separate key/URL).
 
-# ---- Proactive Messaging ----
-PROACTIVE_CRON_SCHEDULE=0 */4 * * *
+# ---- Proactive Messaging (Kyiv time) ----
+# Active hours in Kyiv timezone (e.g. 9-22 = 09:00–22:00). Proactive messages fire at random times within this window.
+PROACTIVE_ACTIVE_HOURS_KYIV=9-22
+# Frontend: how often to poll GET /api/v1/proactive (seconds). Optional; default 90.
+# PROACTIVE_POLL_INTERVAL_SEC=90
 
 # ---- Context Window ----
 IMMEDIATE_CONTEXT_SIZE=50
@@ -68,6 +75,12 @@ MEDIA_BUFFER_MAX=10
 # ---- Data Retention ----
 # Messages older than this are deleted on startup (0 = keep forever)
 MESSAGE_RETENTION_DAYS=90
+
+# ---- Media cache (generated images for edit by media_id) ----
+# Directory to store generated images temporarily; backend returns media_id for future edits
+MEDIA_CACHE_DIR=/tmp/gryag_media_cache
+# TTL in hours for cached images (24–48 recommended)
+MEDIA_CACHE_TTL_HOURS=48
 
 # ---- Persona ----
 PERSONA_FILE=config/persona.txt
