feat: implement chat summarization feature
- Added configuration options for chat summarization in .env.example.
- Introduced summarization functionality in the backend, including 7-day and 30-day summaries.
- Implemented a summarizer runner and scheduler to automate summary generation based on configured intervals.
- Enhanced message handling to support reply context, allowing for more informative summaries.
- Updated database schema to store references to replied messages.
- Refactored relevant components to integrate summarization into the existing messaging workflow.
- Improved logging for summarization processes to track execution and errors.

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,15 @@ SANDBOX_MAX_MEMORY_MB=128
 # ---- Proactive Messaging (Kyiv time) ----
 # Active hours in Kyiv timezone (e.g. 9-22 = 09:00–22:00). Proactive messages fire at random times within this window.
 PROACTIVE_ACTIVE_HOURS_KYIV=9-22
+
+# ---- Summarization (optional) ----
+# When true, 7-day and 30-day chat summaries are built at SUMMARY_RUN_HOUR Kyiv time.
+# 7-day summary runs every SUMMARY_7DAY_INTERVAL_DAYS; 30-day every SUMMARY_30DAY_INTERVAL_DAYS.
+# ENABLE_SUMMARIZATION=false
+# SUMMARY_RUN_HOUR=3
+# SUMMARY_7DAY_INTERVAL_DAYS=3
+# SUMMARY_30DAY_INTERVAL_DAYS=12
+# SUMMARY_MAX_MESSAGES_PER_WINDOW=2000
 # Frontend: how often to poll GET /api/v1/proactive (seconds). Optional; default 90.
 # PROACTIVE_POLL_INTERVAL_SEC=90
 
